[gd_scene load_steps=12 format=3 uid="uid://dyymqhc74fum5"]

[ext_resource type="Script" path="res://Scripts/ai/shadow_knight.gd" id="1_f5s15"]
[ext_resource type="Texture2D" uid="uid://cjirsceq2j7sj" path="res://Art/character/shadow_knight.png" id="2_sybql"]
[ext_resource type="PackedScene" uid="uid://dltlnagj1fcr" path="res://Scenes/collectables/bone_collectable.tscn" id="3_ug4te"]
[ext_resource type="PackedScene" uid="uid://cj6qxbn6oudos" path="res://Scenes/collectables/shadow_orb_collectable.tscn" id="4_yxm3n"]
[ext_resource type="PackedScene" uid="uid://cjtc1aa4kxyom" path="res://Scenes/collectables/ring_collectable.tscn" id="5_kn6ga"]
[ext_resource type="PackedScene" uid="uid://cgumsabfxhisk" path="res://healthbar/healthbar.tscn" id="6_lkvif"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tmuih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sybql")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xmy1w"]
radius = 14.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fbdln"]
radius = 15.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_du3jw"]
radius = 192.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tbmex"]

[node name="ShadowKnight" type="CharacterBody2D"]
script = ExtResource("1_f5s15")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tmuih")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_xmy1w")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_fbdln")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_du3jw")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="bone_collectable" parent="." instance=ExtResource("3_ug4te")]
visible = false
collision_layer = 0
collision_mask = 0

[node name="shadow_orb_collectable" parent="." instance=ExtResource("4_yxm3n")]
visible = false
collision_layer = 0
collision_mask = 0

[node name="ring_collectable" parent="." instance=ExtResource("5_kn6ga")]
visible = false
collision_layer = 0
collision_mask = 0

[node name="find_player_area" type="Area2D" parent="."]
scale = Vector2(26.36, 26.36)

[node name="CollisionShape2D" type="CollisionShape2D" parent="find_player_area"]
scale = Vector2(1.72, 1.72)
shape = SubResource("CircleShape2D_tbmex")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Slow_timer" type="Timer" parent="."]

[node name="Shock_timer" type="Timer" parent="."]

[node name="Healthbar" parent="." instance=ExtResource("6_lkvif")]
offset_left = -11.0
offset_top = -25.0
offset_right = 69.0
offset_bottom = -10.0
scale = Vector2(0.28, 0.28)
max_value = 250.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="find_player_area" to="." method="_on_find_player_area_body_entered"]
[connection signal="timeout" from="Slow_timer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="Shock_timer" to="." method="_on_shock_timer_timeout"]
